# schwifty

./: .gitignore  .pre-commit-config.yaml  .ruff_defaults.toml  AGENTS.md  CHANGELOG.rst  CONTEXT.md  CONTRIBUTING.rst  README.rst  hatch.toml  pyproject.toml
.flox/env/: manifest.toml
.github/workflows/: lint-and-test.yml  publish.yml
docs/adr/: 0001-deprecate-dont-delete-dict-access-on-domain-objects.md
schwifty/: _compat.py  bank-registry.json  bban.py  bic.py  common.py  domain.py  iban-registry.json  iban.py  registry.py
schwifty/bank_registry/: generated_at.json  generated_at.v2.json  generated_be.json  generated_be.v2.json  generated_ch.json  generated_ch.v2.json  generated_cz.json  generated_de.json  generated_ee.json  generated_es.json  generated_fi.v2.json  generated_it.json  generated_md.json  generated_nl.json  generated_no.v2.json  generated_pl.json  generated_pl.v2.json  generated_sk.json  manual_al.json  manual_cy.json  manual_dk.json  manual_es.json  manual_fr.json  manual_gb.json  manual_ie.json  manual_it.json  manual_li.json  manual_lu.json  manual_md.json  manual_pt.json  manual_ro.json
schwifty/checksum/: __init__.py  belgium.py  czech_republic.py  estonia.py  finland.py  france.py  germany.py  iceland.py  iso7064_mod97_10.py  iso7064_mod97_10_variant.py  italy.py  netherlands.py  norway.py  poland.py  spain.py
schwifty/iban_registry/: overwrite.json
scripts/: convert_blz_doc.py  get_bank_registry_api.py  get_bank_registry_at.py  get_bank_registry_be.py  get_bank_registry_ch.py  get_bank_registry_cz.py  get_bank_registry_fi.py  get_bank_registry_hr.py  get_bank_registry_hu.py  get_bank_registry_it.py  get_bank_registry_lv.py  get_bank_registry_nl.py  get_bank_registry_no.py  get_bank_registry_pl.py  get_bank_registry_se.py  get_bank_registry_si.py  get_bank_registry_sk.py  get_bank_registry_ua.py  get_iban_registry.py  remap.py  requirements.txt  update-all.sh
tests/: test_bban.py  test_bic.py  test_checksum.py  test_iban.py  test_registry.py
